gccida/c3/verify_initial_elim_offsets
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verify_initial_elim_offsets/src/reload1.c:3797:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 3339, "verify_initial_elim_offsets"); 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verify_initial_elim_offsets/src/obj/reload1.o] Error 1
